--- a/packages/methods/pom.xml
+++ b/packages/methods/pom.xml
@@ -64,7 +64,7 @@
             </goals>
             <phase>test</phase>
             <configuration>
-              <skipTests>true</skipTests>
+              <!--<skipTests>true</skipTests>-->
               <defaultPackages>
                 <package>methods</package>
                 <package>stats</package>
